# flint

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  update-mimicry.yml
crates/flint-dial/: Cargo.toml
crates/flint-dial/src/: engine.rs  lib.rs  race.rs  strategy.rs
crates/flint-dns/: Cargo.toml  cloudflare-doh-edges-reference.txt
crates/flint-dns/src/: cache.rs  codec.rs  doh.rs  lib.rs  pool.rs  signed.rs  validate.rs
crates/flint-fronted/: Cargo.toml
crates/flint-fronted/src/: lib.rs  meek_poll.rs  scanner.rs  socks5.rs  sys_dns.rs
crates/flint-fronted/tests/: meek_live.rs
crates/flint-kindling/: Cargo.toml
crates/flint-kindling/src/: fronted_bootstrap.rs  lib.rs
crates/flint-shaping/: Cargo.toml
crates/flint-shaping/src/: lib.rs  record_fragment.rs  sni.rs  tcp_split.rs
crates/flint-tls/: Cargo.toml
crates/flint-tls/src/: anchor.rs  connector.rs  gambit.rs  ja4.rs  lib.rs  profile.rs
crates/flint-transport/: Cargo.toml
crates/flint-transport/src/: lib.rs
crates/flint-verify/: Cargo.toml
crates/flint-verify/src/: lib.rs
docs/: design.md  extraction-plan.md
