[package]
name = "flint-shaping"
description = "Wire-shaping primitives: tcp_split (TCP-segment) and record_fragment (TLS-record)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Lean tokio for a reusable lib (not the workspace "full" set): the IO traits + the timer the Layer C
# shaper uses for inter-segment delay. AsyncRead/AsyncWrite/ReadBuf + tokio::time::{sleep, Sleep}.
tokio = { version = "1", default-features = false, features = ["io-util", "time"] }
# CSPRNG for the inter-segment jitter delay (locked stack: ring).
ring = { workspace = true }

[dev-dependencies]
# `#[tokio::test]` + `write_all` in tests.
tokio = { version = "1", default-features = false, features = ["macros", "rt", "io-util", "time"] }
