[package]
name = "flint-verify"
description = "Ed25519 verification of signed bootstrap blobs (config / strategy updates)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Ed25519 verification (locked stack: ring). Same primitive spark's ModuleVerifier used. The signing
# half (Ed25519KeyPair) is used only in tests/tooling; the production path never holds a private key.
ring = { workspace = true }
thiserror = { workspace = true }
